Revert "fix: change mobile popup width to max-content to fix icon spacing"
This reverts commit a1510289e443cd4f8717f1db10bf0ff0b1e94ffe.

--- a/src/components/ContactPopup/ContactPopup.module.css
+++ b/src/components/ContactPopup/ContactPopup.module.css
@@ -197,8 +197,8 @@
   }
 
   .closedContent {
-    padding: 10px 8px 10px 16px;
-    width: max-content;
+    padding: 10px 3px 10px 15px; /* Reduced right padding */
+    width: 235px; /* Matches JS dimension */
     height: 44px;
   }
 
